--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ nav {
   padding-bottom: 20px;
 }
 
+.large-container {
+  padding-left: 7%;
+}
+
 .banner {
   width: 100%;
 }
@@ -220,4 +224,24 @@ nav {
   font-weight: 600;
   display: block;
   margin-bottom: 5px;
+}
+
+@media (max-width:900px) {
+  .menu-icon {
+    display: none;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .container,
+  .large-container {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .nav-right img {
+    display: none;
+  }
 }
