--- a/style.css
+++ b/style.css
@@ -241,7 +241,24 @@ nav {
     padding-right: 5%;
   }
 
-  .nav-right img {
+  .nav-right i {
     display: none;
+  }
+
+  .nav-right .user-icon {
+    display: block;
+    width: 30px;
+  }
+
+  .nav-middle .search-box input {
+    width: 100px;
+  }
+
+  .nav-middle .mic-icon {
+    display: none;
+  }
+
+  .logo {
+    width: 90px;
   }
 }
